# windsock

./: .gitignore  Cargo.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build_and_test.yaml  license_check.yaml  lint.yaml  release.yaml
windsock/: Cargo.toml
windsock/benches/windsock/: cassandra.rs  docker_compose.rs  main.rs
windsock/benches/windsock/config/: cassandra-1-docker-compose.yaml  cassandra-3-docker-compose.yaml
windsock/src/: bench.rs  cli.rs  cloud.rs  data.rs  filter.rs  lib.rs  report.rs  tables.rs
