[workspace]
members = [
    "windsock",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.0.4", features = ["cargo", "derive"] }
tokio = { version = "1.25.0", features = ["full", "macros"] }
anyhow = "1.0.76"
bincode = { version = "2.0.1", features = ["serde", "std"], default-features = false }
serde = { version = "1.0.111", features = ["derive"] }