[package]
name = "windsock"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "database/service benchmarking framework"
readme = "../readme.md"
repository = "https://github.com/shotover/windsock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1.68"
bincode.workspace = true
clap.workspace = true
console = "0.15.5"
copy_dir = "0.1.2"
serde = { workspace = true, features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
time = { version = "0.3.25", features = ["serde"] }
tokio.workspace = true

[dev-dependencies]
scylla = { version = "1.1.0" }
docker-compose-runner = "0.3.0"
itertools = "0.14"

[[bench]]
name = "windsock"
harness = false
